# perf-playground

./: .gitignore  README.md
.github/workflows/: ci.yml
crates/filterbench/: Cargo.toml
crates/filterbench/src/: main.rs
crates/hashbench/: Cargo.toml
crates/hashbench/benches/: hash_bench.rs
crates/hashbench/src/: lib.rs  main.rs
crates/io_uring_queue_depth_sweep/: Cargo.toml
crates/io_uring_queue_depth_sweep/src/: main.rs
crates/uring_bench/: Cargo.toml
crates/uring_bench/src/: main.rs
docs/: glossary.md  methodology.md
experiments/filterbench/: README.md  notes.md  parse.py  run.sh
experiments/filterbench/configs/: default.toml
experiments/filterbench/results/: README.md
experiments/filterbench/results/2026-01-18_b0f1d8752aba/: cmd.txt  env.json  output.csv  summary.md
experiments/hashbench/: README.md  parse.py  run.sh
experiments/hashbench/configs/: default.toml
experiments/hashbench/results/2026-02-18_b0f1d8752aba/: cmd.txt  config.toml  env.json  output.csv  summary.md
experiments/io_uring_queue_depth_sweep/: README.md  notes.md  parse.py  run.sh
experiments/io_uring_queue_depth_sweep/configs/: default.toml
experiments/io_uring_queue_depth_sweep/results/: README.md
experiments/uring_bench/: README.md  env.json  notes.md  parse.py  run.sh
experiments/uring_bench/configs/: default.toml
experiments/uring_bench/results/: README.md
scripts/: collect_env.sh  perf_stat.sh  pin_cpu.sh
