[package]
name = "io_uring_queue_depth_sweep"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"

[target.'cfg(target_os = "linux")'.dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1"
hdrhistogram = "7"
io-uring = "0.7.11"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
